# NovaPass

./: .env.example  .gitignore  CLEANUP_SUMMARY.md  DATABASE_SETUP_YOURS.md  DATA_STORAGE_EXPLAINED.md  LOCAL_SETUP.md  README.md  RUNNING.md  TODO.md  check-status.sh  dev.sh  fix-env.sh  pom.xml  railway.json  vercel.json
.github/workflows/: ci.yml
backend/: pom.xml
backend/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
browser-extension/: background.js  content-script.js  manifest.json  popup.html  popup.js
desktop/: package.json
desktop-client/: pom.xml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docker/: Dockerfile-backend  docker-compose.yml  nginx.conf
docs/: DEPLOYMENT.md  schema.sql
docs/architecture/: README.md
docs/database-schema/: schema-design.sql
scripts/: run-backend.sh  run-client.sh  setup.sh
web-app/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
web-app/public/: manifest.json  sw.js
web-app/src/app/: globals.css  layout.tsx
web-app/src/app/admin/: layout.tsx  page.tsx
web-app/src/app/admin/audit/: page.tsx
web-app/src/app/login/: page.tsx
web-app/src/app/register/: page.tsx
web-app/src/app/settings/: page.tsx
web-app/src/app/vault/: page.tsx
web-app/src/components/: AddItemModal.tsx  ConflictResolutionModal.tsx  EditItemModal.tsx  PasswordStrengthMeter.tsx  SyncManager.tsx  VaultItemCard.tsx
web-app/src/lib/: api.ts  crypto.ts  totp.ts
web-app/src/store/: vaultStore.ts
(+54 files in other folders)
